Carregamento dos recursos de imagem a partir do calsspath